# godot-2025-05-12

./: .clang-format  .clang-format-ignore  .gitignore
custom/: AI前缀.txt
custom/md/: 技术积累.md
monitor/: CMakeLists.txt
monitor/cmake/: utils.cmake
monitor/common/: CMakeLists.txt
monitor/common/common/: utils.cpp  utils.h
monitor/core/: CMakeLists.txt
monitor/core/core/: authors.gen.h  disabled_classes.gen.h  donors.gen.h  license.gen.h  script_encryption_key.gen.cpp  typedefs.h  version_generated.gen.h  version_hash.gen.cpp
monitor/core/core/extension/: ext_wrappers.gen.inc  gdextension_interface_dump.gen.h
monitor/core/core/input/: default_controller_mappings.gen.cpp
monitor/core/core/io/: certs_compressed.gen.h
monitor/core/core/math/: random_pcg.h
monitor/core/core/object/: gdvirtual.gen.inc
monitor/core/core/os/: thread.cpp  thread.h
monitor/drivers/: CMakeLists.txt
monitor/editor/: CMakeLists.txt
monitor/main/: CMakeLists.txt
monitor/modules/: CMakeLists.txt
monitor/platform/: CMakeLists.txt
monitor/platform/windows/: godot_windows.cpp
monitor/scene/: CMakeLists.txt
monitor/servers/: CMakeLists.txt
monitor/servers/servers/rendering/renderer_rd/shaders/: blit.glsl.gen.h  canvas.glsl.gen.h  canvas_occlusion.glsl.gen.h  canvas_sdf.glsl.gen.h  canvas_uniforms_inc.glsl.gen.h  cluster_data_inc.glsl.gen.h  cluster_debug.glsl.gen.h  cluster_render.glsl.gen.h  cluster_store.glsl.gen.h  decal_data_inc.glsl.gen.h  giprobe_write.glsl.gen.h  light_data_inc.glsl.gen.h  particles.glsl.gen.h  particles_copy.glsl.gen.h  samplers_inc.glsl.gen.h  scene_data_inc.glsl.gen.h  scene_forward_aa_inc.glsl.gen.h  scene_forward_gi_inc.glsl.gen.h  scene_forward_lights_inc.glsl.gen.h  scene_forward_vertex_lights_inc.glsl.gen.h  skeleton.glsl.gen.h
monitor/servers/servers/rendering/renderer_rd/shaders/effects/: blur_raster.glsl.gen.h  bokeh_dof.glsl.gen.h  bokeh_dof_raster.glsl.gen.h  copy.glsl.gen.h  copy_to_fb.glsl.gen.h  cube_to_dp.glsl.gen.h  cubemap_downsampler.glsl.gen.h  cubemap_downsampler_raster.glsl.gen.h  cubemap_filter.glsl.gen.h  cubemap_filter_raster.glsl.gen.h  cubemap_roughness.glsl.gen.h  cubemap_roughness_raster.glsl.gen.h  fsr_upscale.glsl.gen.h  luminance_reduce.glsl.gen.h  luminance_reduce_raster.glsl.gen.h  motion_vectors.glsl.gen.h  motion_vectors_store.glsl.gen.h  resolve.glsl.gen.h  roughness_limiter.glsl.gen.h  screen_space_reflection.glsl.gen.h  screen_space_reflection_filter.glsl.gen.h  screen_space_reflection_scale.glsl.gen.h  shadow_frustum.glsl.gen.h  sort.glsl.gen.h  specular_merge.glsl.gen.h  ss_effects_downsample.glsl.gen.h  ssao.glsl.gen.h  ssao_blur.glsl.gen.h  ssao_importance_map.glsl.gen.h  ssao_interleave.glsl.gen.h  ssil.glsl.gen.h  ssil_blur.glsl.gen.h  ssil_importance_map.glsl.gen.h  ssil_interleave.glsl.gen.h  subsurface_scattering.glsl.gen.h  taa_resolve.glsl.gen.h  tonemap.glsl.gen.h  vrs.glsl.gen.h
monitor/servers/servers/rendering/renderer_rd/shaders/effects/fsr2/: fsr2_accumulate_pass.glsl.gen.h  fsr2_autogen_reactive_pass.glsl.gen.h  fsr2_compute_luminance_pyramid_pass.glsl.gen.h  fsr2_depth_clip_pass.glsl.gen.h  fsr2_lock_pass.glsl.gen.h  fsr2_rcas_pass.glsl.gen.h  fsr2_reconstruct_previous_depth_pass.glsl.gen.h  fsr2_tcr_autogen_pass.glsl.gen.h
monitor/servers/servers/rendering/renderer_rd/shaders/environment/: gi.glsl.gen.h  sdfgi_debug.glsl.gen.h  sdfgi_debug_probes.glsl.gen.h  sdfgi_direct_light.glsl.gen.h  sdfgi_integrate.glsl.gen.h  sdfgi_preprocess.glsl.gen.h  sky.glsl.gen.h  volumetric_fog.glsl.gen.h  volumetric_fog_process.glsl.gen.h  voxel_gi.glsl.gen.h  voxel_gi_debug.glsl.gen.h  voxel_gi_sdf.glsl.gen.h
monitor/servers/servers/rendering/renderer_rd/shaders/forward_clustered/: best_fit_normal.glsl.gen.h  scene_forward_clustered.glsl.gen.h
monitor/servers/servers/rendering/renderer_rd/shaders/forward_mobile/: scene_forward_mobile.glsl.gen.h
monitor/tests/: CMakeLists.txt  main.cpp
